--- a/package.json
+++ b/package.json
@@ -9,10 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
+    "expo-checkbox": "~3.0.0",
+    "expo-file-system": "~17.0.1",
+    "expo-media-library": "~16.0.4",
+    "expo-permissions": "^14.4.0",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-signature-canvas": "^4.7.2",
+    "react-native-signature-pad": "^0.1.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.8.6",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
