--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "my-app",
+    "name": "Meeting",
     "slug": "my-app",
     "version": "1.0.0",
     "orientation": "default",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Meeting.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
